--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,6 @@
 @import 'settings';
 
 * {
-  margin: 1vw;
   line-height: 160%;
 }
 
@@ -28,8 +27,9 @@ header {
 
 section {
   max-width: 1280px;
-  margin: 2em auto;
+  margin: auto;
   display: block;
+  padding: 0 1em;
 }
 
 p, ul, li {
@@ -37,7 +37,7 @@ p, ul, li {
 }
 
 ul {
-  padding-left: 3vw;
+  padding-left: 3em;
 }
 
 h1 {
@@ -49,7 +49,7 @@ h2 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 1vw;
+  margin: 0.4em 0 0 0;
   font-weight: 400;
 }
 
@@ -58,7 +58,7 @@ hr {
   padding: 0;
   border: none;
   background-color: #ccc;
-  border-radius: 100vw;
+  border-radius: 100%;
   margin: 4em 0;
 }
 
@@ -70,11 +70,11 @@ hr.pagebreak {
 
 @media only screen and (max-width:800px) {
   body {
-    font-size: 3.5vw;
+    font-size: $rootFontSize * 3.5;
   }
 
   section {
-    margin: 2em;
+    padding: 0 2em;
   }
 }
 
